--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
     "@tailwindcss/postcss": "^4.1.14",
+    "material-icons": "^1.13.14",
     "postcss": "^8.5.6",
+    "roboto-fontface": "^0.10.0",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.14",
     "tslib": "^2.3.0",
